--- a/style.scss
+++ b/style.scss
@@ -44,7 +44,7 @@ main{
   section{
     width: 100%;
     height: 300px;
-    @include flex-center;
+    @include flex-between-column;
 
     form{
       width: 100%;
